--- a/style.css
+++ b/style.css
@@ -1,16 +1,29 @@
+.pixelify-sans {
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 html {
     width: 100%;
     height: 100%;
     padding: 0;
     margin: 0;
 }
+:fullscreen, ::backdrop {
+    background-color: rgba(255,255,255,0);
+}
 body {
-    background-color: aqua;
+    
     width: 100%;
     height: 100%;
     overflow: hidden;
-        padding: 0;
+    padding: 0;
     margin: 0;
+    font-family: "Iceland", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 1.25pc;
 }
 .pauseButton {
     position: absolute;
@@ -19,7 +32,7 @@ body {
     position: absolute;
 }
 #settingsBox, #rulesetBox, #helpBox {
-    width: 15%;
+    width: 18%;
     float: right;
     margin: 2%;
     border: 5px solid darkblue;
@@ -27,6 +40,9 @@ body {
     box-sizing: border-box;
     position: absolute;
     right: 5%;
+    background-image: linear-gradient(45deg, #bfbf2a40 25%, #87782040 25%, #87782040 50%, #bfbf2a40 50%, #bfbf2a40 75%, #87782040 75%, #87782040 100%);
+    background-size: 56.57px 56.57px;
+    color: white;
 }
 #settingsBox {
     right: 22%;
@@ -43,6 +59,9 @@ input[type="button"] {
     opacity: 0.8;
     transition-duration: 0.35s;
     border-radius: 5px;
+        font-family: "Iceland", sans-serif;
+  font-weight: 800;
+  font-style: normal;
 }
 input[type="button"]:hover {
     background-color: green;
@@ -111,6 +130,9 @@ input[type="button"]:hover {
 }
 .modeHelp {
     border: 3px solid yellow;
+    text-align: justify;
+    padding: 3%;
+    margin-bottom: 1%;
 }
 #fpsText {
     margin: 2%;
@@ -119,7 +141,12 @@ input[type="button"]:hover {
     position: absolute;
 }
 .wrapper {
-    position: relative;
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #0a679d;
 }
 canvas {
     position: absolute;
